--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,12 @@
             </div>
             <div class="divider">또는</div>
             <div class="upload-method">
+              <label>Google Takeout JSON 업로드</label>
+              <input type="file" id="takeoutFileInput" accept=".json">
+              <p class="help-text"><a href="https://takeout.google.com" target="_blank">Google Takeout</a>에서 "지도(내 장소)" 내보내기</p>
+            </div>
+            <div class="divider">또는</div>
+            <div class="upload-method">
               <label>Google My Maps URL</label>
               <input type="text" id="kmlUrlInput" placeholder="https://www.google.com/maps/d/...">
               <button id="loadUrlBtn" class="btn-primary">불러오기</button>
