feat: add direct links to API developer consoles in settings

--- a/public/index.html
+++ b/public/index.html
@@ -154,7 +154,9 @@
             <input type="password" id="googleApiKey" placeholder="AIza...">
             <button type="button" class="btn-toggle-visibility" data-target="googleApiKey" title="표시/숨기기">👁️</button>
           </div>
-          <p class="help-text">Google Cloud Console에서 발급</p>
+          <p class="help-text">
+            <a href="https://console.cloud.google.com/apis/credentials" target="_blank">🔗 Google Cloud Console</a>에서 발급
+          </p>
         </div>
         <div class="form-group">
           <label>네이버 Client ID</label>
@@ -169,7 +171,9 @@
             <input type="password" id="naverClientSecret" placeholder="클라이언트 시크릿">
             <button type="button" class="btn-toggle-visibility" data-target="naverClientSecret" title="표시/숨기기">👁️</button>
           </div>
-          <p class="help-text">네이버 개발자센터에서 발급</p>
+          <p class="help-text">
+            <a href="https://developers.naver.com/apps/#/list" target="_blank">🔗 네이버 개발자센터</a>에서 발급 (검색 API 선택)
+          </p>
         </div>
         <div class="form-group">
           <label>Kakao REST API Key</label>
@@ -177,7 +181,9 @@
             <input type="password" id="kakaoApiKey" placeholder="REST API 키">
             <button type="button" class="btn-toggle-visibility" data-target="kakaoApiKey" title="표시/숨기기">👁️</button>
           </div>
-          <p class="help-text">주소→좌표 변환용 (Kakao Developers에서 발급)</p>
+          <p class="help-text">
+            <a href="https://developers.kakao.com/console/app" target="_blank">🔗 Kakao Developers</a>에서 발급 (주소→좌표 변환용)
+          </p>
         </div>
       </div>
       <div class="modal-footer">
