feat: add persistent storage for places data with update date display

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,12 @@
               <button id="loadUrlBtn" class="btn-primary">불러오기</button>
             </div>
           </div>
-          <div id="placesCount" class="info-badge hidden">0개 장소 로드됨</div>
+          <div id="placesInfo" class="places-info hidden">
+            <div id="placesCount" class="info-badge">0개 장소 로드됨</div>
+            <div id="placesSource" class="info-regions"></div>
+            <div id="placesUpdate" class="info-update"></div>
+            <button id="resetPlacesBtn" class="btn-reset" title="초기화">🗑️</button>
+          </div>
         </section>
 
         <!-- 화장실 데이터 업로드 -->
