feat: add CSV support for Google Takeout and ownerType field

--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,9 @@
             </div>
             <div class="divider">또는</div>
             <div class="upload-method">
-              <label>Google Takeout JSON 업로드</label>
-              <input type="file" id="takeoutFileInput" accept=".json">
-              <p class="help-text"><a href="https://takeout.google.com" target="_blank">Google Takeout</a>에서 "지도(내 장소)" 내보내기</p>
+              <label>Google Takeout 업로드 (CSV/JSON)</label>
+              <input type="file" id="takeoutFileInput" accept=".json,.csv">
+              <p class="help-text"><a href="https://takeout.google.com" target="_blank">Google Takeout</a>에서 "저장됨(Saved)" 내보내기</p>
             </div>
             <div class="divider">또는</div>
             <div class="upload-method">
